<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ClientActivity">


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/pageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_interface"
        android:textSize="50dp"/>

    <TextView
        android:id="@+id/userDetails"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello user!" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search by:" />

    <TextView
        android:id="@+id/editTextByCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/searchByLocation" />

    <TextView
        android:id="@+id/editTextByCurrentlyOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/searchCurrentlyOpen" />

    <TextView
        android:id="@+id/editTextByServicesOffered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/searchByServices" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/search" />

</LinearLayout>